# AI_01_05

./: .gitignore  5Fcv.md  AGENTS.md  CLAUDE.md  FRIEND_FEATURE_RUN.md  IMPLEMENTATION_DIFF.md  README.md  SYSTEM_DESIGN.md  docker-compose.prod.yml  docker-compose.yml  friend.py  friend_db.py  friend_main_tortoise_mysql_erd.md  main_screen.py  plan.md  plan_v3.md  pyproject.toml
.github/workflows/: checks.yml
ai_worker/: main.py
ai_worker/tasks/: chatbot_engine.py  kfda_client.py  personas.py
app/: Dockerfile  main.py  main_friend_feature.py
app/core/: config.py  db.py  logger.py  memory_db.py
app/db/: databases.py
app/dependencies/: redis.py  security.py
app/dtos/: appointment_dto.py  auth.py  character_dto.py  chat.py  diary_dto.py  diary_report_dto.py  medication_dto.py  medicine_dto.py  mood_dto.py  ocr_dto.py  report_dto.py  user_medication_dto.py  users.py
app/models/: __init__.py  appointment.py  character.py  chat.py  diary.py  friend_models.py  medication.py  medicine.py  mood.py  report.py  user_medication.py  user_settings.py  users.py
app/repositories/: user_repository.py
app/schemas/: __init__.py  chat_response.py
app/services/: agent_service.py  appointment_service.py  auth.py  character_service.py  chatbot_service.py  crisis_filter.py  diary_report_service.py  drug_agent.py  faiss_service.py  food_drug_service.py  graph_service.py  hyde_service.py  jwt.py  kfda_service.py  llm_service.py  medication_schedule_service.py  medication_service.py  medicine_service.py  mood_service.py  ocr_service.py  persona_service.py  phone_auth.py  pill_service.py  rag_service.py  report_service.py  reranker_service.py  scheduler_service.py  sms_notification_service.py  user_medication_service.py  users.py
app/tests/: conftest.py
app/validators/: user_validators.py
data/faiss/: food_aliases.json
docs/03-analysis/: chat-core.analysis.md  crisis-filter.analysis.md  frontend-chat.analysis.md
docs/04-report/: dodaktalk-v1.report.md
envs/: example.local.env  example.prod.env
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
migrations/models/: 0_20260304111013_init.py  (+1 more)
nginx/: Dockerfile  prod_http.conf  prod_https.conf
scripts/: certbot.sh  embed_dur_files.py  embedding_pipeline.py  seed_medicines.py  seed_neo4j.py
tests/: test_ai_worker_main.py
(+111 files in other folders)
